apps/infra/hass/resources.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha
  namespace: hass
spec:
  ports:
    - port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ha
  namespace: hass
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=false
subsets:
  - addresses:
      - ip: 192.168.2.154
    ports:
      - port: 8123
