apps/infra/hass/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ha-local
  namespace: hass
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ha.rostor.lab`)
      services:
        - kind: Service
          name: ha
          namespace: hass
          port: 8123
          scheme: http
          serversTransport: ha-transport
  tls:
    secretName: hass-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ha-cloud
  namespace: hass
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ha.rostor.cloud`)
      services:
        - kind: Service
          name: ha
          namespace: hass
          port: 8123
          scheme: http
          serversTransport: ha-transport
  tls:
    secretName: hass-cloud-tls
